# Projekt-Dyplomowy-ISSI-Jan-lusarek-Kacper-Gruca

./: .gitignore  .pre-commit-config.yaml  check.ipynb  data_transformation.ipynb  pyproject.toml  transform_to_parquet.py
Frontend/: main_navbar.py
Frontend/src/: app.py  profil.json  steps_navbar.py  user_input.json
Frontend/src/assets/: custom.css  profil_legend.md
Frontend/src/components/: plot_all_metrics_for_category_plotly.py  spider_chart.py
Frontend/src/pages/: 00_home.py  01_formularz.py  02_profil.py  03_zestawienie.py
models/: feature_order_user_profile_model.pkl  user_profile_model.pkl
src/ai_answer_engine/: gemini_model_answer.py  gemini_model_answer_o.py
src/appliances/: base.py  bathing.py  bathroom_heating.py  coffee.py  cooking.py  cooling.py  heating.py  multicookers.py  ovens.py  workstations.py
src/comparisons/: grid.py  household.py  optimizer.py  user_profiles.py
src/pipelines/: generate_grid.py  transform_to_parquet_parallel.py  user_profile_to_grid.py
src/recommendation_engine/: comparing_devices.py  predict_profile_for_user.py  recommend_best_device_per_group.py  user_profile_model.py  validate_user_input.py
src/recommendation_engine/pickles/: appliance_recommendations_for_profiles.pkl  (+2 more)
working_dir/: ._household_146.xlsx  ._household_61.xlsx  ._room_and_appliance_146.xlsx  ._room_and_appliance_61.xlsx  data_exploratory.ipynb  household_146.xlsx  household_61.xlsx  room_and_appliance_146.xlsx  room_and_appliance_61.xlsx
working_dir/code/: appliances_summary.ipynb  make_final_df.ipynb  prepare_data_electricity_usage.ipynb  prepare_data_electricity_usage_JS.ipynb  prepare_data_electricity_usage_KG.ipynb  simulator_appliances_class.py  simulator_prototype.ipynb  simulator_prototype_JS.ipynb  user_profile_assign.ipynb  user_profile_assign_old.ipynb  xgb.ipynb
(+9 files in other folders)
