[project]
name = "projekt-dyplomowy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "shap>=0.47.2",
    "xgboost>=3.0.1",
]
