[project]
name = "projekt-dyplomowy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "duckdb>=1.3.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pgvector>=0.4.1",
    "playwright>=1.52.0",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.33.0",
    "shap>=0.47.2",
    "sqlalchemy>=2.0.41",
    "webdriver-manager>=4.0.2",
    "xgboost>=3.0.1",
]
